[package]
name = "caspershield-contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"

[dependencies]
casper-contract = { version = "5.1.1", default-features = false }
casper-types = { version = "6.1.0", default-features = false }
wee_alloc = { version = "0.4.5", default-features = false }
